--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@react-aria/i18n": "^3.12.6",
     "@react-stately/calendar": "^3.7.1",
+    "@types/react-datepicker": "^6.2.0",
     "@types/recharts": "^1.8.29",
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
@@ -25,9 +26,9 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
-    "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-datepicker": "^8.1.0",
+    "react-dom": "^18.2.0 ",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
