--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "@hookform/resolvers": "^4.1.3",
     "@internationalized/date": "^3.7.0",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-aria/i18n": "^3.12.6",
@@ -28,6 +31,7 @@
     "next": "15.2.1",
     "react": "^18.2.0",
     "react-datepicker": "^8.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0 ",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
